--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,12 @@
     <string name="edt_max_health_hint">Max HP</string>
     <string name="edt_initiative_hint">Initiative</string>
     <string name="edt_hit_dice_hint">Hit Dice</string>
+    <string name="btn_success_decrease_label"><![CDATA[<]]></string>
+    <string name="txt_ds_success_total">DS Success:\n0</string>
+    <string name="btn_success_increase_label"><![CDATA[>]]></string>
+    <string name="btn_ds_failure_decrease_label"><![CDATA[<]]></string>
+    <string name="txt_death_save_failure_total">DS Failures:\n0</string>
+    <string name="btn_ds_failure_increase_label"><![CDATA[>]]></string>
 
     <!-- MainActivity String-Arrays -->
     <string-array name="char_races">
